aluno page - WIP

--- a/src/components/alunos/formAddAluno.html
+++ b/src/components/alunos/formAddAluno.html
@@ -24,12 +24,13 @@
  
 
         <div>
-          <label for="nome">Aluno:</label><input   readonly='true' required id="nome" type="text" placeholder='Digite o nome do aluno'/>
+          <label for="nome">Aluno:</label>
+          <input   readonly='true' required id="aluno_nome" type="text" placeholder='Digite o nome do aluno'/>
         </div>
   
         <div>
           <label><span class='required'>&nbsp;&nbsp; *</span>Responsável:</label> 
-         <input type='text' id='responsavel_nome' readonly='true'/>
+         <input type='text' id='resp_nome' readonly='true'/>
         </div>
 
 
