--- a/src/assets/css/sass/gerador_contrato/_id_contrato.scss
+++ b/src/assets/css/sass/gerador_contrato/_id_contrato.scss
@@ -1,15 +1,7 @@
 @use '../abstracts/' as *;
 #bg_div_id_contrato {
-    display: flex;
-    margin: 0 20px 10px;
-    border: 1px solid #111;
-    background: #eee;
-    padding: 10px;
     label {
-        display: flex;
-        align-items: center;
-        background: #fff;
-        padding: 10px 20px;
+     background:#ddd;
     }
 
     .input_invalido {
@@ -17,10 +9,12 @@
     }
 
     #label_id_automatico_contrato {
+        margin:0px;
+        margin-left:20px;
         transition: all 0.5s;
         @extend .btn-default;
-        max-width: 300px;
-        width: 200px;
+        max-width: 250px;
+        width: 180px;
         user-select: none;
 
         #checkbox_id_automatico_contrato {
