Ajustes em contrato

--- a/src/components/contratos/index.html
+++ b/src/components/contratos/index.html
@@ -178,7 +178,7 @@
             </div>
             <div class='div_input_combo' id='div_combo_curso_2'>
               <label>Curso 2: </label>
-              <select id='combo_curso_2'>
+              <select id='combo_curso_2' disabled>
                 <!--Recebe os valores de curso_nome via função em render-->
               </select>
             </div>
