--- a/src/components/alunos/formAddAluno.html
+++ b/src/components/alunos/formAddAluno.html
@@ -110,7 +110,7 @@
 
       <fieldset>
        <div>
-        <label for="aluno_obs">Obs. sobre o Aluno:</label>
+        <label for="aluno_obs">Obs. sobre o Aluno(a):</label>
       <textarea id="aluno_obs" type="text" placeholder=''></textarea>
       </div>
     </fieldset>
