--- a/src/assets/css/sass/contratos/_form_add_contrato.scss
+++ b/src/assets/css/sass/contratos/_form_add_contrato.scss
@@ -7,7 +7,7 @@
 * {
     box-sizing: border-box;
 }
-#form_contrato {
+#form_add_contrato {
     display: flex;
     box-shadow: 0 1px 3px #666;
     background: #f8f8f8;
