--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -4,7 +4,7 @@
 @use 'elements';
 @use 'cursos_info';
 @use 'controle_aula';
-@use 'gerador_contrato';
+@use 'contratos';
 @use 'alunos';
 @use 'login';
 @use 'users';
@@ -88,6 +88,9 @@ grid-template-columns: 250px 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   }
 }
 
+.components{
+  h3{text-align: center;}
+}
 
 
 #block_screen_msg{
